# learning-rust-with-bbs

./: Cargo.toml  LICENSE  README.md  bbs.db
src/: broadcast_events.rs  input_interface.rs  main.rs
src/db/: connection.rs  manage.rs  mod.rs  queries.rs
src/views/: base_view.rs  bbs_menu.rs  direct_message_view.rs  login_register_view.rs  menu_view.rs  mod.rs  room_view.rs  rooms_view.rs  user_view.rs  users_view.rs
