[package]
name = "rbbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossterm = "0.28.1"
rusqlite = "0.34.0"
#tokio = { version = "1.43.0", features = ["full"] }
once_cell = "1.21.1"
bcrypt = "0.17.0"
crossbeam-channel = "0.5.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"